--- a/index.html
+++ b/index.html
@@ -13,22 +13,10 @@
     // 複数のスポット（緯度・経度・画像URL）
     const spots = [
       {
-        name: "13号館前",
-        lat: 35.69304364103873,
-        lng: 140.0508453073827,
+        name: "目標",
+        lat: 35.69282342434481,
+        lng: 140.05081264777886,
         image: "huyuka1.jpg"
-      },
-      {
-        name: "14号館正面入り口",
-        lat: 35.69253471617953,
-        lng: 140.05090829936066,
-        image: "huyuka2.jpg"
-      },
-      {
-        name: "図書館前",
-        lat: 35.69199985853299,
-        lng: 140.05079113020798,
-        image: "huyuka3.jpg"
       }
     ];
 
